<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wordquizgame.ShowGameActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_game"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1" />

        <Button
            android:layout_width="@dimen/button1"
            android:layout_height="wrap_content"
            android:onClick="clickGame1"
            android:text="@string/game1"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp" />

        <Button
            android:layout_width="@dimen/button1"
            android:layout_height="wrap_content"
            android:onClick="clickGame2"
            android:text="@string/game2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="@dimen/button1"
            android:layout_height="wrap_content"
            android:onClick="clickGame3"
            android:text="@string/game3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</RelativeLayout>
